# citbrains_bit_operations

./: CMakeLists.txt  README.md  convert_bytes.hpp  crc16.hpp  print_bytes.hpp
